--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
         "sass-loader": "^12.1.0",
-        "vue-loader": "^17.0.0",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
         "axios": "^0.27.2",
-        "vue": "^3.2.36",
-        "vue-axios": "^3.4.1"
+        "vue": "^2.6.14",
+        "vuetify": "^2.6.6"
     }
 }
