--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "axios": "^0.27.2",
         "vue": "^2.6.14",
+        "vuelidate": "^0.7.7",
         "vuetify": "^2.6.6"
     }
 }
