--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "query-string": "^7.1.1",
         "vue": "^2.6.14",
         "vuelidate": "^0.7.7",
-        "vuetify": "^2.6.6"
+        "vuetify": "^2.6.6",
+        "vuex": "^3.6.2"
     }
 }
