--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "axios": "^0.27.2",
         "query-string": "^7.1.1",
         "vue": "^2.6.14",
+        "vue-router": "^3.5.4",
         "vuelidate": "^0.7.7",
         "vuetify": "^2.6.6",
         "vuex": "^3.6.2"
