--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "f9webltd/laravel-api-response-helpers": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "phpoffice/phpspreadsheet": "^1.23",
+        "psr/simple-cache": "2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
