--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "moment": "^2.29.4",
         "query-string": "^7.1.1",
         "vue": "^2.6.14",
         "vue-router": "^3.5.4",
