--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "chart.js": "2.9.3",
         "moment": "^2.29.4",
         "query-string": "^7.1.1",
         "vue": "^2.6.14",
+        "vue-chartjs": "3.5.0",
         "vue-router": "^3.5.4",
         "vuelidate": "^0.7.7",
         "vuetify": "^2.6.6",
