added logic for token authentication

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "f9webltd/laravel-api-response-helpers": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
+        "laravel/sanctum": "2.14.1",
         "laravel/tinker": "^2.7",
         "phpoffice/phpspreadsheet": "^1.23",
         "psr/simple-cache": "2.0"
