--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "axios": "^0.27.2",
         "chart.js": "2.9.3",
+        "js-cookie": "^2.2.1",
         "moment": "^2.29.4",
         "query-string": "^7.1.1",
         "vue": "^2.6.14",
