--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "2.14.1",
         "laravel/tinker": "^2.7",
         "phpoffice/phpspreadsheet": "^1.23",
-        "psr/simple-cache": "2.0"
+        "psr/simple-cache": "2.0",
+        "spatie/laravel-permission": "^6.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
